--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -199,13 +199,13 @@ html(lang='en')
                                     | Algebraic Topology, in memory of Hans-Joachim Baues, Bonn, 2022
                     
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/oberwolfach.webp', width='1300', height='700', title='Hochschil (Co)Homology and Applications, Oberwolfach, 2024')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/oberwolfach.webp', width='1300', height='700', title='Hochschild (Co)Homology and Applications, Oberwolfach, 2024')
                             img.img-fluid(src='assets/img/portfolio/thumbnails/oberwolfach.webp', width='650', height='350', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Workshop
                                 .project-name
-                                    | Hochschil (Co)Homology and Applications, Oberwolfach, 2024
+                                    | Hochschild (Co)Homology and Applications, Oberwolfach, 2024
                     
 
         // About
