--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -88,7 +88,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Jeroen Maes and Fernando Muro<br>
+                                | Jeroen Maes  and Fernando Muro<br>
                                 | #[strong Derived homotopy algebras]<br>
                                 | #[i Proc. R. Soc. Edinb., Sect. A, Math.]   153 (2023) no. 4, 1198-1243
                             .card-footer
@@ -346,7 +346,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Ramón Flores and Fernando Muro<br>
+                                | Ramón Flores  and Fernando Muro<br>
                                 | #[strong Torsion homology and cellular approximation]<br>
                                 | #[i Algebr. Geom. Topol.]   19 (2019) no. 1, 457-476
                             .card-footer
@@ -388,7 +388,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and Constanze Roitzheim<br>
+                                | Fernando Muro  and 
+                                a.coauthor(href="https://www.kent.ac.uk/smsas/personal/csrr/") Constanze Roitzheim
+                                |<br>
                                 | #[strong Homotopy theory of bicomplexes]<br>
                                 | #[i J. Pure Appl. Algebra]   223 (2019) no. 5, 1913-1939
                             .card-footer
@@ -472,7 +474,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and Georgios Raptis<br>
+                                | Fernando Muro  and 
+                                a.coauthor(href="https://graptismath.net") Georgios Raptis
+                                |<br>
                                 | #[strong $K$-theory of derivators revisited]<br>
                                 | #[i Ann. $K$-Theory]   2 (2017) no. 2, 303-340
                             .card-footer
@@ -598,7 +602,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and Oriol Raventós<br>
+                                | Fernando Muro  and 
+                                a.coauthor(href="https://sites.google.com/site/oriolraventosmath/") Oriol Raventós
+                                |<br>
                                 | #[strong Transfinite Adams representability]<br>
                                 | #[i Adv. Math.]   292 (2016), 111-180
                             .card-footer
@@ -726,7 +732,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro, Andrew Tonks and Malte Witte<br>
+                                | Fernando Muro, Andrew Tonks  and Malte Witte<br>
                                 | #[strong On determinant functors and $K$-theory]<br>
                                 | #[i Publ. Mat., Barc.]   59 (2015) no. 1, 137-233
                             .card-footer
@@ -773,7 +779,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and Andrew Tonks<br>
+                                | Fernando Muro  and Andrew Tonks<br>
                                 | #[strong Unital associahedra]<br>
                                 | #[i Forum Math.]   26 (2014) no. 2, 593-620
                             .card-footer
@@ -899,7 +905,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and George Raptis<br>
+                                | Fernando Muro  and 
+                                a.coauthor(href="https://graptismath.net") George Raptis
+                                |<br>
                                 | #[strong A note on $K$-theory and triangulated derivators]<br>
                                 | #[i Adv. Math.]   227 (2011) no. 5, 1827-1845
                             .card-footer
@@ -983,7 +991,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Hans-Joachim Baues and Fernando Muro<br>
+                                | Hans-Joachim Baues  and Fernando Muro<br>
                                 | #[strong The algebra of secondary homotopy operations in ring spectra]<br>
                                 | #[i Proc. Lond. Math. Soc. (3)]   102 (2011) no. 4, 637-696
                             .card-footer
@@ -1025,7 +1033,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Hans-Joachim Baues and Fernando Muro<br>
+                                | Hans-Joachim Baues  and Fernando Muro<br>
                                 | #[strong Toda brackets and cup-one squares for ring spectra]<br>
                                 | #[i Commun. Algebra]   37 (2009) no. 1, 56-82
                             .card-footer
@@ -1067,7 +1075,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | H.-J. Baues and F. Muro<br>
+                                | H.-J. Baues  and F. Muro<br>
                                 | #[strong Cohomologically triangulated categories. II]<br>
                                 | #[i J. $K$-Theory]   3 (2009) no. 1, 1-52
                             .card-footer
@@ -1098,7 +1106,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Hans-Joachim Baues and Fernando Muro<br>
+                                | Hans-Joachim Baues  and Fernando Muro<br>
                                 | #[strong The symmetric action on secondary homotopy groups]<br>
                                 | #[i Bull. Belg. Math. Soc. - Simon Stevin]   15 (2008) no. 4, 733-768
                             .card-footer
@@ -1140,7 +1148,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and Andrew Tonks<br>
+                                | Fernando Muro  and Andrew Tonks<br>
                                 | #[strong On $K_1$ of a Waldhausen category]<br>
                                 |   #[i $K$-theory and noncommutative geometry. Proceedings of the ICM 2006 satellite conference, Valladolid, Spain, August 31–September 6, 2006],   2008, 91-115
                             .card-footer
@@ -1181,7 +1189,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Hans-Joachim Baues and Fernando Muro<br>
+                                | Hans-Joachim Baues  and Fernando Muro<br>
                                 | #[strong Smash products for secondary homotopy groups]<br>
                                 | #[i Appl. Categ. Struct.]   16 (2008) no. 5, 551-616
                             .card-footer
@@ -1223,7 +1231,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Hans-Joachim Baues and Fernando Muro<br>
+                                | Hans-Joachim Baues  and Fernando Muro<br>
                                 | #[strong Secondary homotopy groups]<br>
                                 | #[i Forum Math.]   20 (2008) no. 4, 631-677
                             .card-footer
@@ -1265,7 +1273,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | H.-J. Baues and F. Muro<br>
+                                | H.-J. Baues  and F. Muro<br>
                                 | #[strong Cohomologically triangulated categories. I]<br>
                                 | #[i J. $K$-Theory]   1 (2008) no. 1, 3-48
                             .card-footer
@@ -1336,7 +1344,11 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro, Stefan Schwede and Neil Strickland<br>
+                                | Fernando Muro, 
+                                a.coauthor(href="https://www.math.uni-bonn.de/people/schwede/") Stefan Schwede
+                                |  and 
+                                a.coauthor(href="https://strickland1.org") Neil Strickland
+                                |<br>
                                 | #[strong Triangulated categories without models]<br>
                                 | #[i Invent. Math.]   170 (2007) no. 2, 231-241
                             .card-footer
@@ -1378,7 +1390,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Fernando Muro and Andrew Tonks<br>
+                                | Fernando Muro  and Andrew Tonks<br>
                                 | #[strong The 1-type of a Waldhausen $K$-theory spectrum]<br>
                                 | #[i Adv. Math.]   216 (2007) no. 1, 178-211
                             .card-footer
@@ -1420,7 +1432,7 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Hans-Joachim Baues and Fernando Muro<br>
+                                | Hans-Joachim Baues  and Fernando Muro<br>
                                 | #[strong The homotopy category of pseudofunctors and translation cohomology]<br>
                                 | #[i J. Pure Appl. Algebra]   211 (2007) no. 3, 821-850
                             .card-footer
@@ -1499,7 +1511,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | M. Cárdenas, F. F. Lasheras, F. Muro and A. Quintero<br>
+                                | 
+                                a.coauthor(href="https://personal.us.es/mcard/") M. Cárdenas
+                                |, F. F. Lasheras, F. Muro  and A. Quintero<br>
                                 | #[strong Proper L–S category, fundamental pro-groups and 2-dimensional proper co-H-spaces]<br>
                                 | #[i Topology Appl.]   153 (2005) no. 4, 580-604
                             .card-footer
@@ -1528,7 +1542,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | M. Cárdenas, F. Muro and A. Quintero<br>
+                                | 
+                                a.coauthor(href="https://personal.us.es/mcard/") M. Cárdenas
+                                |, F. Muro  and A. Quintero<br>
                                 | #[strong The proper L-S category of Whitehead manifolds]<br>
                                 | #[i Topology Appl.]   153 (2005) no. 4, 557-579
                             .card-footer
@@ -1635,7 +1651,9 @@ html(lang='en')
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | R. Ayala, M. Cárdenas, F. Muro and A. Quintero<br>
+                                | R. Ayala, 
+                                a.coauthor(href="https://personal.us.es/mcard/") M. Cárdenas
+                                |, F. Muro  and A. Quintero<br>
                                 | #[strong An elementary approach to the projective dimension in proper homotopy theory]<br>
                                 | #[i Commun. Algebra]   31 (2003) no. 12, 5995-6017
                             .card-footer
