--- a/src/pug/preprints.j2
+++ b/src/pug/preprints.j2
@@ -81,6 +81,11 @@ html(lang='en')
                 {% for entry in input %}
                 {% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
                 {% if entry.type == '' %}
+                    {% for name in entry.author %}
+                    {% if name.family in extras.coauthors.keys() %}
+                    {% do name.update({'url': extras.coauthors[name.family]}) %}
+                    {% endif %}
+                    {% endfor %}
                     {% filter indent(width=20) %}
                     {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.issue, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
                     {% endfilter -%}
