--- a/src/pug/preprints.pug
+++ b/src/pug/preprints.pug
@@ -85,11 +85,16 @@ html(lang='en')
                 
                 
                     
+                    
+                    
+                    
+                    
+                    
                                         
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Ai Guan and Fernando Muro<br>
+                                | Ai Guan  and Fernando Muro<br>
                                 | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds]<br>
                                 |   2023
                             .card-footer
@@ -125,11 +130,26 @@ html(lang='en')
                 
                 
                     
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
                                         
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
+                                | 
+                                a.coauthor(href="https://gustavo.jasso.info") Gustavo Jasso
+                                |, 
+                                a.coauthor(href="https://webusers.imj-prg.fr/~bernhard.keller/") Bernhard Keller
+                                |  and Fernando Muro<br>
                                 | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence]<br>
                                 |   2023
                             .card-footer
@@ -166,11 +186,26 @@ html(lang='en')
                 
                 
                     
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
                                         
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
+                                | 
+                                a.coauthor(href="https://gustavo.jasso.info") Gustavo Jasso
+                                |, 
+                                a.coauthor(href="https://webusers.imj-prg.fr/~bernhard.keller/") Bernhard Keller
+                                |  and Fernando Muro<br>
                                 | #[strong The Derived Auslander-Iyama Correspondence]<br>
                                 |   2022
                             .card-footer
@@ -206,11 +241,22 @@ html(lang='en')
                 
                 
                     
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
                                         
                     .col.col-lg-9.mx-auto
                         .card.shadow.rounded
                             .card-body
-                                | Victor Carmona, Ramon Flores and Fernando Muro<br>
+                                | 
+                                a.coauthor(href="https://personal.us.es/vcarmona1/") Victor Carmona
+                                |, Ramon Flores  and Fernando Muro<br>
                                 | #[strong A model structure for locally constant factorization algebras]<br>
                                 |   2021
                             .card-footer
