--- a/src/subfiles/publications.pug
+++ b/src/subfiles/publications.pug
@@ -14,11 +14,16 @@ h3.mt-5.mb-3.text-center
     .bi.bi-journal &nbsp; Preprints
 .row.row-cols-1.gx-5.gy-4.mb-4
 
+    
+    
+    
+    
+    
         
     .col.col-lg-9.mx-auto
         .card.shadow.rounded
             .card-body
-                | Ai Guan and Fernando Muro<br>
+                | Ai Guan  and Fernando Muro<br>
                 | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds]<br>
                 |   2023
             .card-footer
@@ -55,11 +60,26 @@ h3.mt-5.mb-3.text-center
 
 
 
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
         
     .col.col-lg-9.mx-auto
         .card.shadow.rounded
             .card-body
-                | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
+                | 
+                a.coauthor(href="https://gustavo.jasso.info") Gustavo Jasso
+                |, 
+                a.coauthor(href="https://webusers.imj-prg.fr/~bernhard.keller/") Bernhard Keller
+                |  and Fernando Muro<br>
                 | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence]<br>
                 |   2023
             .card-footer
@@ -153,12 +173,17 @@ h3.mt-5.mb-3.text-center
 
 
 
+
+
+
+
+
     
         
     .col.col-lg-9.mx-auto
         .card.shadow.rounded
             .card-body
-                | Jeroen Maes and Fernando Muro<br>
+                | Jeroen Maes  and Fernando Muro<br>
                 | #[strong Derived homotopy algebras]<br>
                 | #[i Proc. R. Soc. Edinb., Sect. A, Math.]   153 (2023) no. 4, 1198-1243
             .card-footer
@@ -191,6 +216,9 @@ h3.mt-5.mb-3.text-center
                 a.btn.btn-xs(href="https://zbmath.org/7719245") zbMath
                 
         
+
+
+
 
 
 
@@ -238,8 +266,193 @@ h3.mt-5.mb-3.text-center
 
 
 
+
+
+
 .text-center.mt-2
     a.btn.btn-primary.btn-xl(href='papers.html') See all papers
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
