--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -79,11 +79,11 @@ html(lang='en')
                 hr.divider
                 .row.row-cols-1.gx-5.gy-4.mb-4
                 {% for entry in input %}
-                {% if entry.id in extras.keys() %}
-                {% if extras[entry.id] == ''%}
+                {% if entry.id in extras.open.keys() %}
+                {% if extras.open[entry.id] == ''%}
                 {% set pdf = ('a.btn.btn-xs(href="assets/files/papers/' ~ entry.id ~ '.pdf") PDF') %}
                 {% else %}
-                {% set pdf = ('a.btn.btn-xs(href="' ~ extras[entry.id] ~ '") PDF') %}
+                {% set pdf = ('a.btn.btn-xs(href="' ~ extras.open[entry.id] ~ '") PDF') %}
                 {% endif %}
                 {% else %}
                 {% set pdf = '' %}
