update coauthor link style

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -12138,8 +12138,7 @@ a.coauthor {
 }
 
 a.coauthor:hover {
-  color: #cf5331;
-  border-bottom: 1.5px dashed #cf5331;
+  color: #f4623a;
 }
 
 .btn-xl {
