--- a/src/pug/preprints.j2
+++ b/src/pug/preprints.j2
@@ -25,7 +25,15 @@ html(lang='en')
         link(href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet")
 
         // Favicon
-        link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+        link(rel="apple-touch-icon", sizes="180x180", href="assets/ico/apple-touch-icon.png")
+        link(rel="icon", type="image/png", sizes="32x32", href="assets/ico/favicon-32x32.png")
+        link(rel="icon", type="image/png", sizes="16x16", href="assets/ico/favicon-16x16.png")
+        link(rel="manifest", href="assets/ico/site.webmanifest")
+        link(rel="mask-icon", href="assets/ico/safari-pinned-tab.svg", color="#5bbad5")
+        link(rel="shortcut icon", href="assets/ico/favicon.ico")
+        meta(name="msapplication-TileColor", content="#da532c")
+        meta(name="msapplication-config", content="assets/ico/browserconfig.xml")
+        meta(name="theme-color", content="#ffffff")
 
         // Academicons
         link(rel="stylesheet", href="assets/css/academicons.min.css")
