change active menu item without js

--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -66,8 +66,8 @@ html(lang='en')
                             ul.dropdown-menu.border-3(aria-labelledby="navbarDropdownMenuLink")
                                 li.nav-item 
                                     a.nav-link(href="preprints.html") Preprints
-                                li.nav-item 
-                                    a.nav-link(href="#page-top", style="color: #f4623a;") Papers
+                                li.nav-item
+                                    a.nav-link(href="#page-top").active Papers
                                 li.nav-item 
                                     a.nav-link(href="presentations.html") Presentations
                         li.nav-item
