--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -50,7 +50,7 @@ html(lang='en')
         script(type="text/javascript", id="MathJax-script", defer, src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js")
 
 
-    body#page-top
+    body#page-top(data-bs-spy="scroll", data-bs-target="#mainNav")
 
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
