--- a/src/pug/preprints.pug
+++ b/src/pug/preprints.pug
@@ -65,7 +65,7 @@ html(lang='en')
                             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='index.html#research', data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Research
                             ul.dropdown-menu.border-3(aria-labelledby="navbarDropdownMenuLink")
                                 li.nav-item 
-                                    a.nav-link(href="#page-top", style="color: #f4623a;") Preprints
+                                    a.nav-link(href="#page-top").active Preprints
                                 li.nav-item 
                                     a.nav-link(href="papers.html") Papers
                                 li.nav-item 
