--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -69,7 +69,7 @@ html(lang='en')
                                 li.nav-item 
                                     a.nav-link(href="papers.html") Papers
                                 li.nav-item 
-                                    a.nav-link(href="#page-top", style="color: #f4623a;") Presentations
+                                    a.nav-link(href="#page-top").active Presentations
                         li.nav-item
                             a.nav-link(href='index.html#docencia') Docencia
                         li.nav-item
