forgot to update some templates after simplifying populate

--- a/src/subfiles/presentations_max.j2
+++ b/src/subfiles/presentations_max.j2
@@ -5,7 +5,7 @@ h3.mt-5.mb-3.text-center
     .bi.bi-easel &nbsp; Presentations
 .row.row-cols-1.gx-5.gy-4.mb-4
 {% set count = {'counter': 0} %}
-{% for entry in input %}
+{% for entry in datos.presentations %}
 {% if count.counter < maximum %}
 {% filter indent(width=4) %}
     {{ presentation(entry.title, entry.event, entry.note, entry.daymonth, entry.year, entry.location, entry.file, entry.video, entry.url) }}
