build locally with vscode

--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -1158,7 +1158,7 @@ html(lang='en')
                             .card-body
                                 | Fernando Muro  and Andrew Tonks<br>
                                 | #[strong On $K_1$ of a Waldhausen category]<br>
-                                |   #[i $K$-theory and noncommutative geometry. Proceedings of the ICM 2006 satellite conference, valladolid, spain, august 31–september 6, 2006],   2008, 91-115
+                                |   #[i $K$-theory and noncommutative geometry. Proceedings of the ICM 2006 satellite conference, Valladolid, Spain, August 31–September 6, 2006],   2008, 91-115
                             .card-footer
                                 
                                 a.btn.btn-xs(href="https://arxiv.org/abs/math/0611229") arxiv
